--- a/beavs-frontend/src/App.css
+++ b/beavs-frontend/src/App.css
@@ -40,3 +40,42 @@
 .read-the-docs {
   color: #888;
 }
+
+.login-container {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+img {
+  width: 100%;
+  display: block;
+  margin-bottom: 20px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #D73F09;
+  margin-bottom: 20px;
+  border-radius: 2rem;
+}
+
+button {
+  width: 100%;
+  background-color: #337ab7;
+  color: white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #286090;
+}
