--- a/beavs-frontend/src/App.css
+++ b/beavs-frontend/src/App.css
@@ -127,6 +127,7 @@ a {
   gap: 55px;
   margin-left: 50%;
   margin-right: 50%;
+  margin-top: 15px;
 }
 .title-name .ai {
   color: #D73F09; /* Set the color for "AI" */
@@ -178,7 +179,7 @@ transform: scale(1.1);
   border-radius: 60px;
   background: #D73F09;
   box-shadow: 0px 4px 31px 0px rgba(0, 0, 0, 0.15);
-  padding: 5px;
+  padding: 7px;
   justify-content: center;
 }
 
