--- a/src/App.css
+++ b/src/App.css
@@ -246,7 +246,7 @@ transform: scale(1.1);
   position: absolute;
   width: 1000px;
   height: 700px;
-  margin-left: 25%;
+  right: 2%;
   top: -85%
 }
 /*End of Body 1*/
