--- a/src/pages/Chat.css
+++ b/src/pages/Chat.css
@@ -1,36 +1,3 @@
-/* Main HTML*/
-body {
-    margin: 0;
-    padding: 0;
-    background-color: white;
-    font-family: "Arial", sans-serif;
-    font-family: "Inter";
-    overflow-x: hidden; /* Hide horizontal scrollbar */
-    zoom: 1;
-} 
-
-
-button {
-    border: none;
-    background-color: transparent;
-}
-
-
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-  }
-  
-
-  a {
-    text-decoration: none;
-  }
-/* End of Main HTML*/
-
-
-
-
 .side-bar{
     position: relative;
     width: 251px;
@@ -153,4 +120,30 @@ html, body {
 .username{
     color: black;
     font-size: .6rem;
+}
+
+.page-container {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    width: 100vw;   
+}
+
+.btn {
+    font-size: 25px;
+    color: white;
+    margin-top: 25px;
+    padding: 15px;
+    text-align: center;
+    border-radius: 60px;
+    background: #FF4300;
+    width: 100px;
+    height: 20px;
+}
+
+.btn:hover {
+    background: #FF4300;
+    color: white;
+    cursor: pointer;
+    transform: scale(1.05);
 }
