--- a/src/components/ChatMessage.css
+++ b/src/components/ChatMessage.css
@@ -34,3 +34,18 @@
     justify-content: center;
     gap: 0px;
 }
+
+.send-message-button {
+  background-color: orangered;
+  border: 10px;
+  padding: 10px 20px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+
+
