--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -25,7 +25,7 @@
   height: 100vh;
   flex-shrink: 0;
   border-right: 1px solid #fff;
-  background: #e1e4e8;
+  /* background: #e1e4e8; */
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -175,8 +175,7 @@
   padding-bottom: 50px;
   padding-left: 200px;
   padding-right: 200px;
-  overflow-y: auto;
-  max-height: calc(100vh - 100px);
+  overflow-y: scroll;
 }
 
 @media only screen and (max-width: 600px) {
