--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  /* background-color: black; */
+  background-color: white;
   font-family: "Libre Franklin", sans-serif;
   color: #e8e8e8;
   overflow-x: hidden;
