--- a/src/index.css
+++ b/src/index.css
@@ -12,24 +12,8 @@ body {
   overflow-x: hidden;
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #1a1a1a;
-  }
-
-  .mockup-browser .mockup-browser-toolbar .input {
-    background-color: transparent;
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  body {
-    background-color: #f5f5f5;
-  }
-
-  .mockup-browser .mockup-browser-toolbar .input {
-    background-color: transparent;
-  }
+.mockup-browser .mockup-browser-toolbar .input {
+  background-color: transparent;
 }
 
 @keyframes slideInFromLeft {
@@ -39,4 +23,24 @@ body {
   100% {
     transform: translateX(0);
   }
+}
+
+.link-underline {
+  border-bottom-width: 0;
+  background-image: linear-gradient(transparent, transparent),
+    linear-gradient(#fff, #fff);
+  background-size: 0 3px;
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 0.5s ease-in-out;
+}
+
+.link-underline-black {
+  background-image: linear-gradient(transparent, transparent),
+    linear-gradient(#f2c, #f2c);
+}
+
+.link-underline-hover:hover {
+  background-size: 100% 3px;
+  background-position: 0 100%;
 }
